Changes in 1.6

 - bugfix for 2795321 found by egrath: Don't rely anymore on broken XkbSetDetectableAutoRepeat.

 - bugfix: Use make_lower throughout for spritebank filenames (found and patched by Ion Dune)

 - bugfix: CMountPointReader::openFile no longer returns true for empty files. Corresponding test added.

 - Direct3D now also uses screen coordinates in 2d mode, just like OpenGL. This means that screen coords are going from 0..ScreenWidth and 0..ScreenHeight instead of -1..1.

 - ALT+F4 keypress now closes Windows SDL device

 - Allow Direct3D drivers in SDL, patch by Halifax

 - Added compiler error when attempting to compile with VC6.

 - Use setWindowTextA in Windows device for WIN64 platform, posted by veegun

 - ELL_ERROR log events are now created when shaders fail to compile or link, reported by Halan

 - irrList now uses irrAllocator, fixed by Nox

 - Added IGUIWindow::setDraggable and IGUIWindow::isDraggable, by Nox

 - Added SGI RGB file reader by Gary Conway, for loading Silicon Graphics .rgb, .rgba, .sgi, .int and .inta textures

 - Renamed setResizeAble to setResizable

 - Added new device method minimizeWindow which minimizes the window (just as if the minimize button has been clicked).

 - SkyDome is now serialized correctly

 - Added PLY mesh reader and writer

 - Ensure ListBox on combo box doesn't hang off the bottom of the GUI root, by Matthias Specht

 - Made IGUIElements recalculate clipping rectangle after setNotClipped, reported by Aelis440

 - Bug fix for the combo box where it showed white text instead of skin colour before being focused, fix posted by drewbacca

 - EGDS_MESSAGE_BOX_HEIGHT is now honoured, bug reported by Spkka

 - Fixed a bug in the edit box where events are sometimes sent to a null parent, reported by Sudi.

 - Coordinate system fix for OpenGL in SDL device

 - Added generic console device. You can now use Irrlicht to create and manipuate graphics on a shell where no graphics hardware 